# data-object-editor

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets-example-linux.json  CMakeUserPresets-example-windows.json  README.md  vcpkg.json
.github/workflows/: build.yml
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/DataDeck/: DataFileCompleter.cpp  DataFileCompleter.h  DataFileSyntaxHighlighter.cpp  DataFileSyntaxHighlighter.h  KeywordDatabase.cpp  KeywordDatabase.h  KeywordHelpWidget.cpp  KeywordHelpWidget.h  RicImportDataDeckFeature.cpp  RicImportDataDeckFeature.h  RimDataDeck.cpp  RimDataDeck.h  RimDataDeckTextEditor.cpp  RimDataDeckTextEditor.h  RimDataItem.cpp  RimDataItem.h  RimDataKeyword.cpp  RimDataKeyword.h  RimDataSection.cpp  RimDataSection.h  RimIncludeFile.cpp  RimIncludeFile.h  RimIncludeKeyword.cpp  RimIncludeKeyword.h
